--- a/Sproject.html
+++ b/Sproject.html
@@ -88,7 +88,7 @@
         </p>
 
         <div class="footer">
-            © 2026 | Saja Hamid Alansari
+            © 2026 | Saja Alansari
         </div>
 
     </div>
